--- a/scss/_picker.scss
+++ b/scss/_picker.scss
@@ -1,12 +1,9 @@
-$time-picker-cleaner-icon-color: $gray-600 !default;
-$time-picker-cleaner-icon: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512' role='img'><polygon fill='#{$time-picker-cleaner-icon-color}' points='348.071 141.302 260.308 229.065 172.545 141.302 149.917 163.929 237.681 251.692 149.917 339.456 172.545 362.083 260.308 274.32 348.071 362.083 370.699 339.456 282.935 251.692 370.699 163.929 348.071 141.302' class='ci-primary'></polygon><path fill='#{$time-picker-cleaner-icon-color}' d='M425.706,86.294A240,240,0,0,0,86.294,425.706,240,240,0,0,0,425.706,86.294ZM256,464C141.309,464,48,370.691,48,256S141.309,48,256,48s208,93.309,208,208S370.691,464,256,464Z' class='ci-primary'></path></svg>") !default;
-$time-picker-cleaner-icon-hover-color: $body-color !default;
-$time-picker-cleaner-icon-hover: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512' role='img'><polygon fill='#{$time-picker-cleaner-icon-hover-color}' points='348.071 141.302 260.308 229.065 172.545 141.302 149.917 163.929 237.681 251.692 149.917 339.456 172.545 362.083 260.308 274.32 348.071 362.083 370.699 339.456 282.935 251.692 370.699 163.929 348.071 141.302' class='ci-primary'></polygon><path fill='#{$time-picker-cleaner-icon-hover-color}' d='M425.706,86.294A240,240,0,0,0,86.294,425.706,240,240,0,0,0,425.706,86.294ZM256,464C141.309,464,48,370.691,48,256S141.309,48,256,48s208,93.309,208,208S370.691,464,256,464Z' class='ci-primary'></path></svg>") !default;
-
-$time-picker-input-icon-color: $gray-600 !default;
-$time-picker-input-icon: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512' role='img'><polygon fill='#{$time-picker-input-icon-color}' points='271.514 95.5 239.514 95.5 239.514 273.611 355.127 328.559 368.864 299.657 271.514 253.389 271.514 95.5' class='ci-primary'></polygon><path fill='#{$time-picker-input-icon-color}' d='M256,16C123.452,16,16,123.452,16,256S123.452,496,256,496,496,388.548,496,256,388.548,16,256,16Zm0,448C141.125,464,48,370.875,48,256S141.125,48,256,48s208,93.125,208,208S370.875,464,256,464Z' class='ci-primary'></path></svg>") !default;
-
 .picker {
+  // scss-docs-start picker-css-vars
+  --#{$variable-prefix}picker-footer-border-top: #{$picker-footer-border-width} solid #{$picker-footer-border-color};
+  --#{$variable-prefix}picker-footer-padding: #{$picker-footer-padding};
+  // scss-docs-end picker-css-vars
+
   .dropdown-menu {
     padding: 0;
   }
@@ -86,7 +83,7 @@ $time-picker-input-icon: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2
 
   .input-group-text {
     color: var(--cui-gray-400);
-    background-color: transparent;
+    background-color: var(--#{$variable-prefix}input-bg, $input-bg);
   }
 }
 
@@ -105,8 +102,8 @@ $time-picker-input-icon: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2
 .picker-footer {
   display: flex;
   justify-content: flex-end;
-  padding: .5rem;
-  border-top: 1px solid var(--#{$variable-prefix}gray-200);
+  padding: var(--#{$variable-prefix}picker-footer-padding);
+  border-top: var(--#{$variable-prefix}picker-footer-border-top);
 
   .btn + .btn {
     @include ltr-rtl("margin-left", .5rem);
