chore: fix stylelint errors

--- a/scss/mixins/_theme.scss
+++ b/scss/mixins/_theme.scss
@@ -43,8 +43,7 @@
       @each $class, $variants in $value {
         @include theme-colors($variants, $class);
       }
-    }
-    @else {
+    } @else {
       .#{$name} {
         @include theme-components($value, $name);
       }
