fix(MultiSelect): cut placeholder

--- a/scss/forms/_form-multi-select.scss
+++ b/scss/forms/_form-multi-select.scss
@@ -95,6 +95,10 @@
     display: none;
     margin-left: $form-multi-select-padding-x;
   }
+
+  &:placeholder-shown {
+    width: 100%;
+  }
 }
 
 .form-multi-select-all {
