refactor(Calendar): add new options, improve syntax

--- a/scss/_calendar.scss
+++ b/scss/_calendar.scss
@@ -26,6 +26,11 @@
       width: var(--#{$variable-prefix}calendar-table-cell-size);
     }
   }
+
+  &.months ~ .time-picker,
+  &.years ~ .time-picker {
+    display: none;
+  }
 }
 
 .calendar-nav {
